# pikorua-adflow

./: .dockerignore  .env.example  .gitignore  AGENTS.md  AUTOOPTIMISER_ROADMAP.md  CAPI_CRM_INTEGRATION.md  Dockerfile  IMAGE_PIPELINE_MAP.md  NEW_IMAGE_PIPELINE.md  README.md  _manual_llm_outputs.py  _manual_llm_outputs_s36.py  anamika_heights_prompts.txt  anamika_heights_prompts_s36.txt  anamika_heights_visual_prompts_s36.json  anamika_heights_visual_prompts_s45.json  ao_sim.py  docker-compose.prod.yml  docker-compose.yml  export_crm_leads.py  pyproject.toml  requirements.txt  scratch_graph.py  session_handoff.md  tasklist.md  test_full_pipeline.py  test_ideogram_direct.py  test_pipeline_ideogram.py  test_pipeline_prompt.py  test_prompt_assembly.py  test_two_prompts.py  test_variant_check.py  test_visual_prompter_llm.py
docs/: runbook.md
outputs/: competitor_report.md  copy_rewrites.md  copy_scorecard.md  crm_insights.md  crm_signal.md  crm_strategic_insights.json  error_log.txt  meta_audiences_registry.json  optimization_history.json  persona.json  pincode_cache.json  render_prompts.md  runs.json  targeting_brief.md  targeting_cache.json  trend_hooks.md  visual_brief.md
portal/: index.html
project_context/: ads_layout_analysis.json  brand_voice.md  campaign_data.csv  campaign_examples.md  crm_export.csv  data_audit.md  lead_categories.yaml  pikorua_overview.md  references_analyses.json
tests/: test_autooptimiser_thresholds.py  test_geo_targeting.py  test_image_pipeline.py  test_lead_rules.py  test_lead_timing.py  test_llm_strategist.py  test_lookalike_health.py  (+4 more)
(+107 files in other folders)
